Fix breadcrumb bg on mobile

--- a/style.css
+++ b/style.css
@@ -735,6 +735,7 @@ a {
 
   .left-neon {
     top: 0;
+    left: 0;
   }
 
   .hero-text-wrapper {
